--- a/public/admin.html
+++ b/public/admin.html
@@ -8,53 +8,88 @@
 </head>
 
 <body>
-  <div id="admin" class="content">
-  <h1>Museum of Kermits: The Admin Page!</h1>
-    <div class="heading">
-      <div class="circle">1</div>
-      <h2>Add a Kermit</h2>
+  <div id="app">
+    <div class="container">
+      <div @click="selectPiece(1-1)" class="block white" id="1-1"></div>
+      <div @click="selectPiece(1-2)" class="block black" id="1-2"></div>
+      <div @click="selectPiece(1-3)" class="block white" id="1-3"></div>
+      <div @click="selectPiece(1-4)" class="block black" id="1-4"></div>
+      <div @click="selectPiece(1-5)" class="block white" id="1-5"></div>
+      <div @click="selectPiece(1-6)" class="block black" id="1-6"></div>
+      <div @click="selectPiece(1-7)" class="block white" id="1-7"></div>
+      <div @click="selectPiece(1-8)" class="block black" id="1-8"></div>
     </div>
-    <div class="add">
-      <div class="form">
-        <input v-model="title" placeholder="Title">
-        <p></p>
-        <input type="file" name="photo" @change="fileChanged">
-        <p></p>
-        <input v-model="description" placeholder="Description">
-        <p></p>
-        <button @click="upload">Upload</button>
-      </div>
-      <div class="upload" v-if="addItem">
-        <h2>{{addItem.title}}</h2>
-        <img :src="addItem.path" />
-        <p>{{addItem.description}}</p>
-      </div>
+    <div class="container">
+      <div @click="selectPiece(2-1)" class="block black" id="2-1"></div>
+      <div @click="selectPiece(2-2)" class="block white" id="2-2"></div>
+      <div @click="selectPiece(2-3)" class="block black" id="2-3"></div>
+      <div @click="selectPiece(2-4)" class="block white" id="2-4"></div>
+      <div @click="selectPiece(2-5)" class="block black" id="2-5"></div>
+      <div @click="selectPiece(2-6)" class="block white" id="2-6"></div>
+      <div @click="selectPiece(2-7)" class="block black" id="2-7"></div>
+      <div @click="selectPiece(2-8)" class="block white" id="2-8"></div>
     </div>
-    <div class="heading">
-      <div class="circle">2</div>
-      <h2>Edit/Delete a Kermit</h2>
+    <div class="container">
+      <div @click="selectPiece(3-1)" class="block white" id="3-1"></div>
+      <div @click="selectPiece(3-2)" class="block black" id="3-2"></div>
+      <div @click="selectPiece(3-3)" class="block white" id="3-3"></div>
+      <div @click="selectPiece(3-4)" class="block black" id="3-4"></div>
+      <div @click="selectPiece(3-5)" class="block white" id="3-5"></div>
+      <div @click="selectPiece(3-6)" class="block black" id="3-6"></div>
+      <div @click="selectPiece(3-7)" class="block white" id="3-7"></div>
+      <div @click="selectPiece(3-8)" class="block black" id="3-8"></div>
     </div>
-    <div class="edit">
-      <div class="form">
-        <input v-model="findTitle" placeholder="Search">
-        <div class="suggestions" v-if="suggestions.length > 0">
-          <div class="suggestion" v-for="s in suggestions" @click="selectItem(s)">{{s.title}}
-          </div>
-        </div>
-      </div>
-      <div class="upload" v-if="findItem">
-        <p>TITLE:</p>
-        <input v-model="findItem.title">
-        <p></p>
-        <img :src="findItem.path" />
-        <p>DESCRIPTION:</p>
-        <input v-model="findItem.description">
-      </div>
-      <div class="actions" v-if="findItem">
-        <button @click="deleteItem(findItem)">Delete</button>
-        <button @click="editItem(findItem)">Edit</button>
-      </div>
+    <div class="container">
+      <div @click="selectPiece(4-1)" class="block black" id="4-1"></div>
+      <div @click="selectPiece(4-2)" class="block white" id="4-2"></div>
+      <div @click="selectPiece(4-3)" class="block black" id="4-3"></div>
+      <div @click="selectPiece(4-4)" class="block white" id="4-4"></div>
+      <div @click="selectPiece(4-5)" class="block black" id="4-5"></div>
+      <div @click="selectPiece(4-6)" class="block white" id="4-6"></div>
+      <div @click="selectPiece(4-7)" class="block black" id="4-7"></div>
+      <div @click="selectPiece(4-8)" class="block white" id="4-8"></div>
     </div>
+    <div class="container">
+      <div @click="selectPiece(5-1)" class="block white" id="5-1"></div>
+      <div @click="selectPiece(5-2)" class="block black" id="5-2"></div>
+      <div @click="selectPiece(5-3)" class="block white" id="5-3"></div>
+      <div @click="selectPiece(5-4)" class="block black" id="5-4"></div>
+      <div @click="selectPiece(5-5)" class="block white" id="5-5"></div>
+      <div @click="selectPiece(5-6)" class="block black" id="5-6"></div>
+      <div @click="selectPiece(5-7)" class="block white" id="5-7"></div>
+      <div @click="selectPiece(5-8)" class="block black" id="5-8"></div>
+    </div>
+    <div class="container">
+      <div @click="selectPiece(6-1)" class="block black" id="6-1"></div>
+      <div @click="selectPiece(6-2)" class="block white" id="6-2"></div>
+      <div @click="selectPiece(6-3)" class="block black" id="6-3"></div>
+      <div @click="selectPiece(6-4)" class="block white" id="6-4"></div>
+      <div @click="selectPiece(6-5)" class="block black" id="6-5"></div>
+      <div @click="selectPiece(6-6)" class="block white" id="6-6"></div>
+      <div @click="selectPiece(6-7)" class="block black" id="6-7"></div>
+      <div @click="selectPiece(6-8)" class="block white" id="6-8"></div>
+    </div>
+    <div class="container">
+      <div @click="selectPiece(7-1)" class="block white" id="7-1"></div>
+      <div @click="selectPiece(7-2)" class="block black" id="7-2"></div>
+      <div @click="selectPiece(7-3)" class="block white" id="7-3"></div>
+      <div @click="selectPiece(7-4)" class="block black" id="7-4"></div>
+      <div @click="selectPiece(7-5)" class="block white" id="7-5"></div>
+      <div @click="selectPiece(7-6)" class="block black" id="7-6"></div>
+      <div @click="selectPiece(7-7)" class="block white" id="7-7"></div>
+      <div @click="selectPiece(7-8)" class="block black" id="7-8"></div>
+    </div>
+    <div class="container">
+      <div @click="selectPiece(8-1)" class="block black" id="8-1"></div>
+      <div @click="selectPiece(8-2)" class="block white" id="8-2"></div>
+      <div @click="selectPiece(8-3)" class="block black" id="8-3"></div>
+      <div @click="selectPiece(8-4)" class="block white" id="8-4"></div>
+      <div @click="selectPiece(8-5)" class="block black" id="8-5"></div>
+      <div @click="selectPiece(8-6)" class="block white" id="8-6"></div>
+      <div @click="selectPiece(8-7)" class="block black" id="8-7"></div>
+      <div @click="selectPiece(8-8)" class="block white" id="8-8"></div>
+    </div>
+
   </div>
 
   <div class="footer">
@@ -62,7 +97,7 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.js" integrity="sha256-g+Q8DFAmG5+eyRPSydX0LY4TfjsL11XSDrIGerbbEdA=" crossorigin="anonymous"></script>
-  <script src="admin.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
