--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,13 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
-  <title>Museum of Kermits</title>
+  <title>Express Chess</title>
 </head>
 
 <body>
   <div class="header">
-    <div class="logo">
-      <img src="images/ordinary.png">
-    </div>
     <div class="title">
-      <h2>CS 260</h2>
-      <h1>Museum of Kermits</h1>
+      <h1>Express Chess</h1>
     </div>
   </div>
   <div id="app" class="content">
