Edit - Making Front-End Compatible with Back-End

--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,29 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <title>Express Chess</title>
 </head>
 
 <body>
+  <a href="http://andrewdanielyoung.com/" id="homeButton"> </a>
   <div class="header">
     <div class="title">
       <h1>Express Chess</h1>
     </div>
   </div>
-  <div id="app" class="content">
-	<section class="image-gallery">
-		<div class="image" v-for="item in items">
-		<h2>{{item.title}}</h2>
-    <img :src="item.path" />
-    <p>{{item.description}}</p>
-		</div>
+
+  <div id="home">
+    <button>{{buttonText}}</button>
   </div>
+	
   <div class="footer">
-    <a href="admin.html">Admin</a>
-    <a href="https://github.com/BYU-CS-260-Winter-2019/lab-4-andyruwruw.git">Git Repository</a>
+    <a href="https://github.com/andyruwruw/Express-Chess.git" id="git">Git Repository</a>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.js" integrity="sha256-g+Q8DFAmG5+eyRPSydX0LY4TfjsL11XSDrIGerbbEdA=" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <script src="js/home.js"></script>
 </body>
 
 </html>
