--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,169 @@
         <button @click="checkAvailableMatches">{{buttonText}}</button>
       </div>
     </div>
-    <div id="board">
-    
+    <div id="board" v-if="PLAYER_INFO.color == 'w' && startGame">
+      <div class="container">
+        <div @click="selectPiece('8-1')" class="block white" id="8-1"></div>
+        <div @click="selectPiece('8-2')" class="block black" id="8-2"></div>
+        <div @click="selectPiece('8-3')" class="block white" id="8-3"></div>
+        <div @click="selectPiece('8-4')" class="block black" id="8-4"></div>
+        <div @click="selectPiece('8-5')" class="block white" id="8-5"></div>
+        <div @click="selectPiece('8-6')" class="block black" id="8-6"></div>
+        <div @click="selectPiece('8-7')" class="block white" id="8-7"></div>
+        <div @click="selectPiece('8-8')" class="block black" id="8-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('7-1')" class="block black" id="7-1"></div>
+        <div @click="selectPiece('7-2')" class="block white" id="7-2"></div>
+        <div @click="selectPiece('7-3')" class="block black" id="7-3"></div>
+        <div @click="selectPiece('7-4')" class="block white" id="7-4"></div>
+        <div @click="selectPiece('7-5')" class="block black" id="7-5"></div>
+        <div @click="selectPiece('7-6')" class="block white" id="7-6"></div>
+        <div @click="selectPiece('7-7')" class="block black" id="7-7"></div>
+        <div @click="selectPiece('7-8')" class="block white" id="7-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('6-1')" class="block white" id="6-1"></div>
+        <div @click="selectPiece('6-2')" class="block black" id="6-2"></div>
+        <div @click="selectPiece('6-3')" class="block white" id="6-3"></div>
+        <div @click="selectPiece('6-4')" class="block black" id="6-4"></div>
+        <div @click="selectPiece('6-5')" class="block white" id="6-5"></div>
+        <div @click="selectPiece('6-6')" class="block black" id="6-6"></div>
+        <div @click="selectPiece('6-7')" class="block white" id="6-7"></div>
+        <div @click="selectPiece('6-8')" class="block black" id="6-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('5-1')" class="block black" id="5-1"></div>
+        <div @click="selectPiece('5-2')" class="block white" id="5-2"></div>
+        <div @click="selectPiece('5-3')" class="block black" id="5-3"></div>
+        <div @click="selectPiece('5-4')" class="block white" id="5-4"></div>
+        <div @click="selectPiece('5-5')" class="block black" id="5-5"></div>
+        <div @click="selectPiece('5-6')" class="block white" id="5-6"></div>
+        <div @click="selectPiece('5-7')" class="block black" id="5-7"></div>
+        <div @click="selectPiece('5-8')" class="block white" id="5-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('4-1')" class="block white" id="4-1"></div>
+        <div @click="selectPiece('4-2')" class="block black" id="4-2"></div>
+        <div @click="selectPiece('4-3')" class="block white" id="4-3"></div>
+        <div @click="selectPiece('4-4')" class="block black" id="4-4"></div>
+        <div @click="selectPiece('4-5')" class="block white" id="4-5"></div>
+        <div @click="selectPiece('4-6')" class="block black" id="4-6"></div>
+        <div @click="selectPiece('4-7')" class="block white" id="4-7"></div>
+        <div @click="selectPiece('4-8')" class="block black" id="4-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('3-1')" class="block black" id="3-1"></div>
+        <div @click="selectPiece('3-2')" class="block white" id="3-2"></div>
+        <div @click="selectPiece('3-3')" class="block black" id="3-3"></div>
+        <div @click="selectPiece('3-4')" class="block white" id="3-4"></div>
+        <div @click="selectPiece('3-5')" class="block black" id="3-5"></div>
+        <div @click="selectPiece('3-6')" class="block white" id="3-6"></div>
+        <div @click="selectPiece('3-7')" class="block black" id="3-7"></div>
+        <div @click="selectPiece('3-8')" class="block white" id="3-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('2-1')" class="block white" id="2-1"></div>
+        <div @click="selectPiece('2-2')" class="block black" id="2-2"></div>
+        <div @click="selectPiece('2-3')" class="block white" id="2-3"></div>
+        <div @click="selectPiece('2-4')" class="block black" id="2-4"></div>
+        <div @click="selectPiece('2-5')" class="block white" id="2-5"></div>
+        <div @click="selectPiece('2-6')" class="block black" id="2-6"></div>
+        <div @click="selectPiece('2-7')" class="block white" id="2-7"></div>
+        <div @click="selectPiece('2-8')" class="block black" id="2-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('1-1')" class="block black" id="1-1"></div>
+        <div @click="selectPiece('1-2')" class="block white" id="1-2"></div>
+        <div @click="selectPiece('1-3')" class="block black" id="1-3"></div>
+        <div @click="selectPiece('1-4')" class="block white" id="1-4"></div>
+        <div @click="selectPiece('1-5')" class="block black" id="1-5"></div>
+        <div @click="selectPiece('1-6')" class="block white" id="1-6"></div>
+        <div @click="selectPiece('1-7')" class="block black" id="1-7"></div>
+        <div @click="selectPiece('1-8')" class="block white" id="1-8"></div>
+      </div>
+    </div>
+    <div id="board" v-if="PLAYER_INFO.color == 'b' && startGame">
+      <div class="container">
+        <div @click="selectPiece('1-1')" class="block black" id="1-1"></div>
+        <div @click="selectPiece('1-2')" class="block white" id="1-2"></div>
+        <div @click="selectPiece('1-3')" class="block black" id="1-3"></div>
+        <div @click="selectPiece('1-4')" class="block white" id="1-4"></div>
+        <div @click="selectPiece('1-5')" class="block black" id="1-5"></div>
+        <div @click="selectPiece('1-6')" class="block white" id="1-6"></div>
+        <div @click="selectPiece('1-7')" class="block black" id="1-7"></div>
+        <div @click="selectPiece('1-8')" class="block white" id="1-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('2-1')" class="block white" id="2-1"></div>
+        <div @click="selectPiece('2-2')" class="block black" id="2-2"></div>
+        <div @click="selectPiece('2-3')" class="block white" id="2-3"></div>
+        <div @click="selectPiece('2-4')" class="block black" id="2-4"></div>
+        <div @click="selectPiece('2-5')" class="block white" id="2-5"></div>
+        <div @click="selectPiece('2-6')" class="block black" id="2-6"></div>
+        <div @click="selectPiece('2-7')" class="block white" id="2-7"></div>
+        <div @click="selectPiece('2-8')" class="block black" id="2-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('3-1')" class="block black" id="3-1"></div>
+        <div @click="selectPiece('3-2')" class="block white" id="3-2"></div>
+        <div @click="selectPiece('3-3')" class="block black" id="3-3"></div>
+        <div @click="selectPiece('3-4')" class="block white" id="3-4"></div>
+        <div @click="selectPiece('3-5')" class="block black" id="3-5"></div>
+        <div @click="selectPiece('3-6')" class="block white" id="3-6"></div>
+        <div @click="selectPiece('3-7')" class="block black" id="3-7"></div>
+        <div @click="selectPiece('3-8')" class="block white" id="3-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('4-1')" class="block white" id="4-1"></div>
+        <div @click="selectPiece('4-2')" class="block black" id="4-2"></div>
+        <div @click="selectPiece('4-3')" class="block white" id="4-3"></div>
+        <div @click="selectPiece('4-4')" class="block black" id="4-4"></div>
+        <div @click="selectPiece('4-5')" class="block white" id="4-5"></div>
+        <div @click="selectPiece('4-6')" class="block black" id="4-6"></div>
+        <div @click="selectPiece('4-7')" class="block white" id="4-7"></div>
+        <div @click="selectPiece('4-8')" class="block black" id="4-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('5-1')" class="block black" id="5-1"></div>
+        <div @click="selectPiece('5-2')" class="block white" id="5-2"></div>
+        <div @click="selectPiece('5-3')" class="block black" id="5-3"></div>
+        <div @click="selectPiece('5-4')" class="block white" id="5-4"></div>
+        <div @click="selectPiece('5-5')" class="block black" id="5-5"></div>
+        <div @click="selectPiece('5-6')" class="block white" id="5-6"></div>
+        <div @click="selectPiece('5-7')" class="block black" id="5-7"></div>
+        <div @click="selectPiece('5-8')" class="block white" id="5-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('6-1')" class="block white" id="6-1"></div>
+        <div @click="selectPiece('6-2')" class="block black" id="6-2"></div>
+        <div @click="selectPiece('6-3')" class="block white" id="6-3"></div>
+        <div @click="selectPiece('6-4')" class="block black" id="6-4"></div>
+        <div @click="selectPiece('6-5')" class="block white" id="6-5"></div>
+        <div @click="selectPiece('6-6')" class="block black" id="6-6"></div>
+        <div @click="selectPiece('6-7')" class="block white" id="6-7"></div>
+        <div @click="selectPiece('6-8')" class="block black" id="6-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('7-1')" class="block black" id="7-1"></div>
+        <div @click="selectPiece('7-2')" class="block white" id="7-2"></div>
+        <div @click="selectPiece('7-3')" class="block black" id="7-3"></div>
+        <div @click="selectPiece('7-4')" class="block white" id="7-4"></div>
+        <div @click="selectPiece('7-5')" class="block black" id="7-5"></div>
+        <div @click="selectPiece('7-6')" class="block white" id="7-6"></div>
+        <div @click="selectPiece('7-7')" class="block black" id="7-7"></div>
+        <div @click="selectPiece('7-8')" class="block white" id="7-8"></div>
+      </div>
+      <div class="container">
+        <div @click="selectPiece('8-1')" class="block white" id="8-1"></div>
+        <div @click="selectPiece('8-2')" class="block black" id="8-2"></div>
+        <div @click="selectPiece('8-3')" class="block white" id="8-3"></div>
+        <div @click="selectPiece('8-4')" class="block black" id="8-4"></div>
+        <div @click="selectPiece('8-5')" class="block white" id="8-5"></div>
+        <div @click="selectPiece('8-6')" class="block black" id="8-6"></div>
+        <div @click="selectPiece('8-7')" class="block white" id="8-7"></div>
+        <div @click="selectPiece('8-8')" class="block black" id="8-8"></div>
+      </div>
     </div>
   </div>
 
