Edit - Adding Check Notification, Refresh Moved Reworked.

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <h2 class="center add-more-top-margin">From Server</h2>
-        <h3 id="serverMessage">{{serverData.serverMessage}}</h3>
+        <h3 id="serverMessage">{{serverData.serverMessageText}}</h3>
         <div id="bottom" class="container">
         <h2 class="center">Game ID</h2>
         <h5 id="gameID">{{serverData.gameID}}</h5>
