Edit - Starting Data Added as Separate JavaScript

--- a/public/index.html
+++ b/public/index.html
@@ -291,6 +291,7 @@
   <script src="js/classes/bishop.js"></script>
   <script src="js/classes/knight.js"></script>
   <script src="js/classes/pawn.js"></script>
+  <script src="js/startingdata.js"></script>
   <script src="js/game.js"></script>
 </body>
 
