--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,7 @@
         </div>
         <h2 class="center add-more-top-margin">From Server</h2>
         <h3 id="serverMessage">{{serverData.serverMessageText}}</h3>
+        <button @click="toggleAssistSelect">Move Assist</button>
         <div id="bottom" class="container">
         <h2 class="center">Game ID</h2>
         <h5 id="gameID">{{serverData.gameID}}</h5>
@@ -106,7 +107,7 @@
           <div @click="clickBlock('7-1')" class="bn block black" id="7-1"></div>
           <div @click="clickBlock('7-2')" class="bb block white" id="7-2"></div>
           <div @click="clickBlock('7-3')" class="bq block black" id="7-3"></div>
-          <div @click="clickBlock('7-4')" class="bq block white" id="7-4"></div>
+          <div @click="clickBlock('7-4')" class="bk block white" id="7-4"></div>
           <div @click="clickBlock('7-5')" class="bb block black" id="7-5"></div>
           <div @click="clickBlock('7-6')" class="bn block white" id="7-6"></div>
           <div @click="clickBlock('7-7')" class="br block black" id="7-7"></div>
@@ -184,84 +185,84 @@
       </div>
       <div id="board" v-if="gameData.team">
         <div class="container">
-          <div @click="clickBlock('0-7')" class="wr block black" id="0-7"></div>
-          <div @click="clickBlock('0-6')" class="wn block white" id="0-6"></div>
-          <div @click="clickBlock('0-5')" class="wb block black" id="0-5"></div>
-          <div @click="clickBlock('0-4')" class="wk block white" id="0-4"></div>
-          <div @click="clickBlock('0-3')" class="wq block black" id="0-3"></div>
-          <div @click="clickBlock('0-2')" class="wb block white" id="0-2"></div>
-          <div @click="clickBlock('0-1')" class="wn block black" id="0-1"></div>
-          <div @click="clickBlock('0-0')" class="wr block white" id="0-0"></div>
+          <div @click="clickBlock('0-7')" class="wr block white" id="0-7"></div>
+          <div @click="clickBlock('0-6')" class="wn block black" id="0-6"></div>
+          <div @click="clickBlock('0-5')" class="wb block white" id="0-5"></div>
+          <div @click="clickBlock('0-4')" class="wk block black" id="0-4"></div>
+          <div @click="clickBlock('0-3')" class="wq block white" id="0-3"></div>
+          <div @click="clickBlock('0-2')" class="wb block black" id="0-2"></div>
+          <div @click="clickBlock('0-1')" class="wn block white" id="0-1"></div>
+          <div @click="clickBlock('0-0')" class="wr block black" id="0-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('1-7')" class="wp block white" id="1-7"></div>
-          <div @click="clickBlock('1-6')" class="wp block black" id="1-6"></div>
-          <div @click="clickBlock('1-5')" class="wp block white" id="1-5"></div>
-          <div @click="clickBlock('1-4')" class="wp block black" id="1-4"></div>
-          <div @click="clickBlock('1-3')" class="wp block white" id="1-3"></div>
-          <div @click="clickBlock('1-2')" class="wp block black" id="1-2"></div>
-          <div @click="clickBlock('1-1')" class="wp block white" id="1-1"></div>
-          <div @click="clickBlock('1-0')" class="wp block black" id="1-0"></div>
+          <div @click="clickBlock('1-7')" class="wp block black" id="1-7"></div>
+          <div @click="clickBlock('1-6')" class="wp block white" id="1-6"></div>
+          <div @click="clickBlock('1-5')" class="wp block black" id="1-5"></div>
+          <div @click="clickBlock('1-4')" class="wp block white" id="1-4"></div>
+          <div @click="clickBlock('1-3')" class="wp block black" id="1-3"></div>
+          <div @click="clickBlock('1-2')" class="wp block white" id="1-2"></div>
+          <div @click="clickBlock('1-1')" class="wp block black" id="1-1"></div>
+          <div @click="clickBlock('1-0')" class="wp block white" id="1-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('2-7')" class="block black" id="2-7"></div>
-          <div @click="clickBlock('2-6')" class="block white" id="2-6"></div>
-          <div @click="clickBlock('2-5')" class="block black" id="2-5"></div>
-          <div @click="clickBlock('2-4')" class="block white" id="2-4"></div>
-          <div @click="clickBlock('2-3')" class="block black" id="2-3"></div>
-          <div @click="clickBlock('2-2')" class="block white" id="2-2"></div>
-          <div @click="clickBlock('2-1')" class="block black" id="2-1"></div>
-          <div @click="clickBlock('2-0')" class="block white" id="2-0"></div>
+          <div @click="clickBlock('2-7')" class="block white" id="2-7"></div>
+          <div @click="clickBlock('2-6')" class="block black" id="2-6"></div>
+          <div @click="clickBlock('2-5')" class="block white" id="2-5"></div>
+          <div @click="clickBlock('2-4')" class="block black" id="2-4"></div>
+          <div @click="clickBlock('2-3')" class="block white" id="2-3"></div>
+          <div @click="clickBlock('2-2')" class="block black" id="2-2"></div>
+          <div @click="clickBlock('2-1')" class="block white" id="2-1"></div>
+          <div @click="clickBlock('2-0')" class="block black" id="2-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('3-7')" class="block white" id="3-7"></div>
-          <div @click="clickBlock('3-6')" class="block black" id="3-6"></div>
-          <div @click="clickBlock('3-5')" class="block white" id="3-5"></div>
-          <div @click="clickBlock('3-4')" class="block black" id="3-4"></div>
-          <div @click="clickBlock('3-3')" class="block white" id="3-3"></div>
-          <div @click="clickBlock('3-2')" class="block black" id="3-2"></div>
-          <div @click="clickBlock('3-1')" class="block white" id="3-1"></div>
-          <div @click="clickBlock('3-0')" class="block black" id="3-0"></div>
+          <div @click="clickBlock('3-7')" class="block black" id="3-7"></div>
+          <div @click="clickBlock('3-6')" class="block white" id="3-6"></div>
+          <div @click="clickBlock('3-5')" class="block black" id="3-5"></div>
+          <div @click="clickBlock('3-4')" class="block white" id="3-4"></div>
+          <div @click="clickBlock('3-3')" class="block black" id="3-3"></div>
+          <div @click="clickBlock('3-2')" class="block white" id="3-2"></div>
+          <div @click="clickBlock('3-1')" class="block black" id="3-1"></div>
+          <div @click="clickBlock('3-0')" class="block white" id="3-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('4-7')" class="block black" id="4-7"></div>
-          <div @click="clickBlock('4-6')" class="block white" id="4-6"></div>
-          <div @click="clickBlock('4-5')" class="block black" id="4-5"></div>
-          <div @click="clickBlock('4-4')" class="block white" id="4-4"></div>
-          <div @click="clickBlock('4-3')" class="block black" id="4-3"></div>
-          <div @click="clickBlock('4-2')" class="block white" id="4-2"></div>
-          <div @click="clickBlock('4-1')" class="block black" id="4-1"></div>
-          <div @click="clickBlock('4-0')" class="block white" id="4-0"></div>
+          <div @click="clickBlock('4-7')" class="block white" id="4-7"></div>
+          <div @click="clickBlock('4-6')" class="block black" id="4-6"></div>
+          <div @click="clickBlock('4-5')" class="block white" id="4-5"></div>
+          <div @click="clickBlock('4-4')" class="block black" id="4-4"></div>
+          <div @click="clickBlock('4-3')" class="block white" id="4-3"></div>
+          <div @click="clickBlock('4-2')" class="block black" id="4-2"></div>
+          <div @click="clickBlock('4-1')" class="block white" id="4-1"></div>
+          <div @click="clickBlock('4-0')" class="block black" id="4-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('5-7')" class="block white" id="5-7"></div>
-          <div @click="clickBlock('5-6')" class="block black" id="5-6"></div>
-          <div @click="clickBlock('5-5')" class="block white" id="5-5"></div>
-          <div @click="clickBlock('5-4')" class="block black" id="5-4"></div>
-          <div @click="clickBlock('5-3')" class="block white" id="5-3"></div>
-          <div @click="clickBlock('5-2')" class="block black" id="5-2"></div>
-          <div @click="clickBlock('5-1')" class="block white" id="5-1"></div>
-          <div @click="clickBlock('5-0')" class="block black" id="5-0"></div>
+          <div @click="clickBlock('5-7')" class="block black" id="5-7"></div>
+          <div @click="clickBlock('5-6')" class="block white" id="5-6"></div>
+          <div @click="clickBlock('5-5')" class="block black" id="5-5"></div>
+          <div @click="clickBlock('5-4')" class="block white" id="5-4"></div>
+          <div @click="clickBlock('5-3')" class="block black" id="5-3"></div>
+          <div @click="clickBlock('5-2')" class="block white" id="5-2"></div>
+          <div @click="clickBlock('5-1')" class="block black" id="5-1"></div>
+          <div @click="clickBlock('5-0')" class="block white" id="5-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('6-7')" class="bp block black" id="6-7"></div>
-          <div @click="clickBlock('6-6')" class="bp block white" id="6-6"></div>
-          <div @click="clickBlock('6-5')" class="bp block black" id="6-5"></div>
-          <div @click="clickBlock('6-4')" class="bp block white" id="6-4"></div>
-          <div @click="clickBlock('6-3')" class="bp block black" id="6-3"></div>
-          <div @click="clickBlock('6-2')" class="bp block white" id="6-2"></div>
-          <div @click="clickBlock('6-1')" class="bp block black" id="6-1"></div>
-          <div @click="clickBlock('6-0')" class="bp block white" id="6-0"></div>
+          <div @click="clickBlock('6-7')" class="bp block white" id="6-7"></div>
+          <div @click="clickBlock('6-6')" class="bp block black" id="6-6"></div>
+          <div @click="clickBlock('6-5')" class="bp block white" id="6-5"></div>
+          <div @click="clickBlock('6-4')" class="bp block black" id="6-4"></div>
+          <div @click="clickBlock('6-3')" class="bp block white" id="6-3"></div>
+          <div @click="clickBlock('6-2')" class="bp block black" id="6-2"></div>
+          <div @click="clickBlock('6-1')" class="bp block white" id="6-1"></div>
+          <div @click="clickBlock('6-0')" class="bp block black" id="6-0"></div>
         </div>
         <div class="container">
-          <div @click="clickBlock('7-7')" class="br block white" id="7-7"></div>
-          <div @click="clickBlock('7-6')" class="bn block black" id="7-6"></div>
-          <div @click="clickBlock('7-5')" class="bb block white" id="7-5"></div>
-          <div @click="clickBlock('7-4')" class="bk block black" id="7-4"></div>
-          <div @click="clickBlock('7-3')" class="bq block white" id="7-3"></div>
-          <div @click="clickBlock('7-2')" class="bb block black" id="7-2"></div>
-          <div @click="clickBlock('7-1')" class="bn block white" id="7-1"></div>
-          <div @click="clickBlock('7-0')" class="bk block black" id="7-0"></div>
+          <div @click="clickBlock('7-7')" class="br block black" id="7-7"></div>
+          <div @click="clickBlock('7-6')" class="bn block white" id="7-6"></div>
+          <div @click="clickBlock('7-5')" class="bb block black" id="7-5"></div>
+          <div @click="clickBlock('7-4')" class="bk block white" id="7-4"></div>
+          <div @click="clickBlock('7-3')" class="bq block black" id="7-3"></div>
+          <div @click="clickBlock('7-2')" class="bb block white" id="7-2"></div>
+          <div @click="clickBlock('7-1')" class="bn block black" id="7-1"></div>
+          <div @click="clickBlock('7-0')" class="br block white" id="7-0"></div>
         </div>
       </div>
       <div class="sideDiv" id="chat">
