--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,30 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css" />
   <title>Express Chess</title>
-  <audio id="music">
-      <source src="sounds/music.mp3" type="audio/mpeg">
-    </audio>
+  <audio id="orionstheme">
+      <source src="sounds/orionstheme.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="chopin">
+    <source src="sounds/chopin.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="bach">
+    <source src="sounds/bach.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="minecraft">
+    <source src="sounds/minecraft.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="lowfi">
+    <source src="sounds/lowfi.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="bluemantique">
+    <source src="sounds/bluemantique.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="outkast">
+    <source src="sounds/outkast.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="wouh">
+    <source src="sounds/wouh.mp3" type="audio/mpeg">
+  </audio>
   <audio id="select">
     <source src="sounds/select.wav" type="audio/wav">
   </audio>
@@ -31,6 +52,12 @@
   </audio>
   <audio id="turn">
     <source src="sounds/turn.wav" type="audio/wav">
+  </audio>
+  <audio id="end">
+    <source src="sounds/end.wav" type="audio/wav">
+  </audio>
+  <audio id="stalemate">
+    <source src="sounds/stalemate.wav" type="audio/wav">
   </audio>
 </head>
 <div id="loading"></div>
@@ -95,10 +122,12 @@
         </div>
         <h2 class="center add-more-top-margin">From Server</h2>
         <h3 id="serverMessage">{{serverData.serverMessageText}}</h3>
-        <button @click="toggleAssistSelect">Move Assist</button>
-        <div id="bottom" class="container">
-        <h2 class="center">Game ID</h2>
-        <h5 id="gameID">{{serverData.gameID}}</h5>
+        <div id="bottom">
+          <button @click="toggleAssistSelect" class="optionButton" id="moveAssist">Move Assist</button>
+          <button @click="changeSong" @mouseover="selectData.showSong = true" @mouseleave="selectData.showSong = false" class="optionButton" style="color: white">{{currmusic}}</button>
+        </div>
+        <div id="top-bottom" class="container">
+        <button id="gameID">{{gameIDButton}}</button>
         </div>
       </div>
       <div id="board" v-if="!gameData.team">
@@ -267,14 +296,13 @@
       </div>
       <div class="sideDiv" id="chat">
         <h2 class="center">Chat</h2>
-        <div v-if="!chatData.messagesBool" id="noplayermessages"></div>
-        <p>{{chatData.messages.length}}</p>
-        <div class="message" v-if="chatData.messagesBool" v-for="message in chatData.messages">  
+        <div v-if="!chatData.messages.length" id="noplayermessages"></div>
+        <div class="message" v-for="message in chatData.messages">  
           <div class="messageDetails">
               <h4>{{message.usr}}</h4>
               <h5>{{message.time}}</h5>
           </div>
-          <p>{{message.text}}</p>
+          <p style="font-family: 'Cairo', sans-serif">{{message.text}}</p>
         </div>
         <div class="form">
           <input v-model="chatData.messageText" id="textbox" placeholder="Send Message">
