Patch - Enemies now log past king to account for invalid moves into danger

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,15 @@
   <audio id="lowfi">
     <source src="sounds/lowfi.mp3" type="audio/mpeg">
   </audio>
+  <audio id="check">
+    <source src="sounds/check.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="chat">
+    <source src="sounds/chat.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="sendchat">
+    <source src="sounds/sendchat.mp3" type="audio/mpeg">
+  </audio>
   <audio id="bluemantique">
     <source src="sounds/bluemantique.mp3" type="audio/mpeg">
   </audio>
@@ -37,9 +46,6 @@
   </audio>
   <audio id="error">
     <source src="sounds/error.wav" type="audio/wav">
-  </audio>
-  <audio id="check">
-    <source src="sounds/check.wav" type="audio/wav">
   </audio>
   <audio id="checkmate">   
     <source src="sounds/checkmate.wav" type="audio/wav">
@@ -321,11 +327,11 @@
   <script src="js/classes/piece.js"></script>
   <script src="js/classes/king.js"></script>
   <script src="js/classes/queen.js"></script>
-  <script src="js/classes/rook.js"></script>
   <script src="js/classes/bishop.js"></script>
   <script src="js/classes/knight.js"></script>
   <script src="js/classes/pawn.js"></script>
   <script src="js/startingdata.js"></script>
+  <script src="js/classes/rook.js"></script>
   <script src="js/game.js"></script>
 </body>
 
